Fix popup editor z-index is larger than ag-header-cell-resize

--- a/packages/ag-grid-community/src/styles/_ag-theme-common.scss
+++ b/packages/ag-grid-community/src/styles/_ag-theme-common.scss
@@ -936,7 +936,7 @@
 
         background: $editor-background-color-color;
         padding: 0;
-        z-index: 1;
+        z-index: 5;
 
         .ag-large-textarea textarea {
             @include textbox($params);
